update controller
